# Basic_Cmake_Template

./: CMakeLists.txt  README.md
fibonacci/: CMakeLists.txt  fibonacci.c  fibonacci.h
math/: CMakeLists.txt  fast_math.c  fast_math.h
src/: main.c
